--- a/views/dashboard.hbs
+++ b/views/dashboard.hbs
@@ -1,5 +1,10 @@
 <h2>Личный кабинет</h2>
 <p>Добро пожаловать, <span id="userName"></span>!</p>
+
+<a href="/profile">
+    <button>Редактировать профиль</button>
+</a>
+
 <button id="logout">Выйти</button>
 
 <script src="/js/auth.js"></script>
